[gd_scene load_steps=2 format=3 uid="uid://ql20ukmeidqs"]

[ext_resource type="Script" uid="uid://catoxty62ga0v" path="res://scripts/ui/squad_screen.gd" id="1_tyq4d"]

[node name="SquadScreen" type="CanvasLayer"]
script = ExtResource("1_tyq4d")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SquadLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "Squad"

[node name="Control" type="Control" parent="Control/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MoneyLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "Money: $0"

[node name="BackButton" type="Button" parent="Control/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "Back"

[node name="HSeparator" type="HSeparator" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContentArea" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Starting11Label" type="Label" parent="Control/MarginContainer/VBoxContainer/ContentArea/VBoxContainer"]
layout_mode = 2
text = "Starting 11"

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/VBoxContainer/ContentArea/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartingList" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/ContentArea/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubstitutesLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/ContentArea/VBoxContainer2"]
layout_mode = 2
text = "Substitutes"

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/VBoxContainer/ContentArea/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="SubsList" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/ContentArea/VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save & Return"

[node name="PlayMatchButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Match"
